--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
+    "device-detector-js": "^3.0.3",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -39,7 +40,8 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "useragent": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
