--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^7.4.3",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.91.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "tailwindcss": "^3.3.3",
