--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,9 @@ ADMIN_EMAIL=admin@example.com
 ADMIN_PASSWORD=your_admin_password_here
 
 # AI API Keys - keep these secure
+# Replace these with your actual API keys and NEVER commit them to Git
 COHERE_API_KEY=your_cohere_api_key_here
-HUGGING_FACE_API_KEY=your_hugging_face_api_key_here
+HUGGING_FACE_API_KEY=your_hugging_face_token_here
 
 # Social Media Links
 INSTAGRAM_URL=https://www.instagram.com/ft_raise_59
