--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "node -e \"require('fs').mkdirSync('public/uploads', { recursive: true }); require('fs').mkdirSync('public/images', { recursive: true })\"",
-    "migrate": "node scripts/migrateMemories.js"
+    "migrate": "node scripts/migrateMemories.js",
+    "init-packages": "node scripts/initPackages.js",
+    "test-razorpay": "node scripts/testRazorpay.js",
+    "add-free-package": "node scripts/addFreePackage.js"
   },
   "keywords": [
     "ai",
@@ -43,8 +46,10 @@
     "openai": "^4.91.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "razorpay": "^2.9.6",
     "tailwindcss": "^3.3.3",
     "useragent": "^2.3.0",
+    "uuid": "^11.1.0",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
