--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "express-session": "^1.17.3",
     "framer-motion": "^10.15.1",
     "method-override": "^3.0.0",
+    "moment-timezone": "^0.5.48",
     "mongoose": "^7.4.3",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
     "openai": "^4.91.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.16.0",
     "razorpay": "^2.9.6",
     "tailwindcss": "^3.3.3",
     "useragent": "^2.3.0",
