feat: add password reset functionality and website builder features
- Added password reset functionality with OTP verification and Brevo email service integration
- Implemented website builder routes, models, and controllers for package management, template creation, and website editing
- Added new models for Website, WebsitePage, Package, Payment, and TemplatePage
- Updated admin dashboard with password reset history tracking
- Enhanced flash message handling with auto-dismiss and clear all functionality
- Added deployment guide for Render and Brevo email service configuration

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,10 @@ ADMIN_PASSWORD=your_admin_password_here
 COHERE_API_KEY=your_cohere_api_key_here
 HUGGING_FACE_API_KEY=your_hugging_face_token_here
 
+# Email Service Configuration
+# Brevo API key for sending emails
+BREVO_API_KEY=your_brevo_api_key_here
+
 # Social Media Links
 INSTAGRAM_URL=https://www.instagram.com/ft_raise_59
 GITHUB_URL=https://github.com/Mudaliyar1
