--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install && node scripts/check-dependencies.js",
     "postinstall": "node -e \"require('fs').mkdirSync('public/uploads', { recursive: true }); require('fs').mkdirSync('public/images', { recursive: true })\"",
     "migrate": "node scripts/migrateMemories.js"
   },
@@ -46,6 +47,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pdfkit": "^0.16.0",
+    "razorpay": "^2.9.2",
     "tailwindcss": "^3.3.3",
     "useragent": "^2.3.0",
     "uuid": "^11.1.0",
