--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "ftraise59/vijay",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^7.0.1",
     "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0",
@@ -47,7 +48,10 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pdfkit": "^0.16.0",
+    "peer": "^1.0.2",
+    "peerjs": "^1.5.4",
     "razorpay": "^2.9.2",
+    "socket.io": "^4.8.1",
     "tailwindcss": "^3.3.3",
     "useragent": "^2.3.0",
     "uuid": "^11.1.0",
