--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,7 @@ EMAIL_ADDRESS=vijaymudaliyar224@gmail.com
 
 # Base URL for the application
 BASE_URL=http://localhost:3000
+
+# Session Cookie Settings
+# Set to true only if you have HTTPS configured
+SECURE_COOKIES=false
