--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,7 @@ BASE_URL=http://localhost:3000
 # Session Cookie Settings
 # Set to true only if you have HTTPS configured
 SECURE_COOKIES=false
+
+# Debug Settings
+# Set to true to enable flash message debugging in console
+DEBUG_FLASH=false
