--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-rate-limit": "^6.9.0",
     "express-session": "^1.17.3",
+    "express-useragent": "^1.0.15",
     "framer-motion": "^10.15.1",
     "method-override": "^3.0.0",
     "moment-timezone": "^0.5.48",
