feat(ip-tracker): add IP & Location Tracker feature with GeoIP integration
Introduce a new IP & Location Tracker feature that records user login attempts with detailed geolocation data using MaxMind GeoLite2 databases. The feature includes:
- A new UserLogin model to store login attempts with location data
- Utility functions for IP geolocation and device detection
- Admin dashboard for viewing, filtering, and exporting login records
- Integration with existing maintenance login tracking

The feature enhances security monitoring by providing detailed insights into user login locations and devices.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "ftraise59/vijay",
   "license": "ISC",
   "dependencies": {
+    "@maxmind/geoip2-node": "^6.1.0",
     "archiver": "^7.0.1",
     "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
@@ -40,6 +41,8 @@
     "express-session": "^1.17.3",
     "express-useragent": "^1.0.15",
     "framer-motion": "^10.15.1",
+    "json2csv": "^6.0.0-alpha.2",
+    "maxmind": "^4.3.25",
     "method-override": "^3.0.0",
     "moment-timezone": "^0.5.48",
     "mongoose": "^7.4.3",
