--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-rate-limit": "^6.9.0",
     "express-session": "^1.17.3",
     "express-useragent": "^1.0.15",
+    "extract-zip": "^2.0.1",
     "framer-motion": "^10.15.1",
     "json2csv": "^6.0.0-alpha.2",
     "maxmind": "^4.3.25",
@@ -55,6 +56,7 @@
     "peer": "^1.0.2",
     "peerjs": "^1.5.4",
     "razorpay": "^2.9.2",
+    "sib-api-v3-sdk": "^8.5.0",
     "socket.io": "^4.8.1",
     "tailwindcss": "^3.3.3",
     "useragent": "^2.3.0",
