fix(status): update status app URL to use environment variables
Ensure the status app URL dynamically adjusts based on the environment (production or development) to avoid hardcoded localhost references. This fixes the issue where users were redirected to localhost in production instead of the actual status page URL.

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,9 @@ EMAIL_ADDRESS=vijaymudaliyar224@gmail.com
 # Base URL for the application
 BASE_URL=http://localhost:3000
 
+# Status App URL
+STATUS_APP_URL=https://ftraise-status.onrender.com
+
 # Session Cookie Settings
 # Set to true only if you have HTTPS configured
 SECURE_COOKIES=false
