--- a/status-app/.env.example
+++ b/status-app/.env.example
@@ -7,6 +7,9 @@ STATUS_PORT=3001
 # Main App URL to monitor
 MAIN_APP_URL=https://ftraiseai.onrender.com
 
+# Status App URL (for links in emails)
+STATUS_APP_URL=https://ftraise-status.onrender.com
+
 # Monitoring Interval (in milliseconds)
 MONITOR_INTERVAL=60000
 
