--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ EMAIL_ADDRESS=vijaymudaliyar224@gmail.com
 BASE_URL=http://localhost:3000
 
 # Status App URL
-STATUS_APP_URL=https://ftraise-status.onrender.com
+STATUS_APP_URL=https://ftraise.status.onrender.com
 
 # Session Cookie Settings
 # Set to true only if you have HTTPS configured
