--- a/status-app/.env.example
+++ b/status-app/.env.example
@@ -8,7 +8,7 @@ STATUS_PORT=3001
 MAIN_APP_URL=https://ftraiseai.onrender.com
 
 # Status App URL (for links in emails)
-STATUS_APP_URL=https://ftraise.status.onrender.com
+STATUS_APP_URL=http://ftraise.status.onrender.com
 
 # Monitoring Interval (in milliseconds)
 MONITOR_INTERVAL=60000
