done done done 2

--- a/.env.example
+++ b/.env.example
@@ -25,8 +25,11 @@ EMAIL_ADDRESS=vijaymudaliyar224@gmail.com
 # Base URL for the application
 BASE_URL=http://localhost:3000
 
-# Status App URL
-STATUS_APP_URL=http://ftraise.status.onrender.com
+# Status Server Port
+STATUS_PORT=3001
+
+# Status App URL (deprecated, now using local status server)
+# STATUS_APP_URL=http://ftraise.status.onrender.com
 
 # Session Cookie Settings
 # Set to true only if you have HTTPS configured
