refactor: remove status app and related components  Removed the status app and all associated files, including controllers, models, routes, and utilities. This includes deleting the status app's Docker configuration, startup scripts, and integration files. Additionally, updated the main application to remove references to the status app, such as navigation links and related scripts. This change simplifies the codebase by removing unused and redundant components.

--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,8 @@ SECURE_COOKIES=false
 # Debug Settings
 # Set to true to enable flash message debugging in console
 DEBUG_FLASH=false
+
+# Payment Gateway Settings
+# Razorpay API keys for payment processing
+RAZORPAY_KEY_ID=your_razorpay_key_id_here
+RAZORPAY_KEY_SECRET=your_razorpay_key_secret_here
