--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "node start-dev.js",
+    "dev:direct": "nodemon --config nodemon.json server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm install && node scripts/check-dependencies.js",
     "postinstall": "node -e \"require('fs').mkdirSync('public/uploads', { recursive: true }); require('fs').mkdirSync('public/images', { recursive: true }); require('fs').mkdirSync('logs', { recursive: true })\"",
